layout and typography

--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,77 @@
     <title>Navigation</title>
 </head>
 <body>
-    <div class="list"></div>
+
+<div class="container">
+    <nav class="navigation">
+        <div class="navigation-list">
+            <div class="navigation-list__group-headline">Mail</div>
+            <div class="navigation-list__group">
+                <div class="navigation-list__group-item">
+                    <div class="navigation-list__group-item__icon">
+                        <span class="material-symbols-outlined">Inbox</span>
+                    </div>
+                    <div class="navigation-list__group-item__text">Inbox</div>
+                </div>
+                <div class="navigation-list__group-item">
+                    <div class="navigation-list__group-item__icon">
+                        <span class="material-symbols-outlined">send</span>
+                    </div>
+                    <div class="navigation-list__group-item__text">Outbox</div>
+                </div>
+                <div class="navigation-list__group-item">
+                    <div class="navigation-list__group-item__icon">
+                        <span class="material-symbols-outlined">favorite</span>
+                    </div>
+                    <div class="navigation-list__group-item__text">Favorites</div>
+                </div>
+                <div class="navigation-list__group-item">
+                    <div class="navigation-list__group-item__icon">
+                        <span class="material-symbols-outlined">archive</span>
+                    </div>
+                    <div class="navigation-list__group-item__text">Archive</div>
+                </div>
+                <div class="navigation-list__group-item">
+                    <div class="navigation-list__group-item__icon">
+                        <span class="material-symbols-outlined">delete</span>
+                    </div>
+                    <div class="navigation-list__group-item__text">Trash</div>
+                </div>
+                <hr class="navigation-list__group-item__line">
+            </div>
+        </div>
+        <div class="navigation-list">
+            <div class="navigation-list__group-headline">Folders</div>
+            <div class="navigation-list__group">
+                <div class="navigation-list__group-item">
+                    <div class="navigation-list__group-item__icon">
+                        <span class="material-symbols-outlined material-symbols-outlined--folder">square</span>
+                    </div>
+                    <div class="navigation-list__group-item__text">Folder</div>
+                </div>
+                <div class="navigation-list__group-item">
+                    <div class="navigation-list__group-item__icon">
+                        <span class="material-symbols-outlined material-symbols-outlined--folder">circle</span>
+                    </div>
+                    <div class="navigation-list__group-item__text">Folder</div>
+                </div>
+                <div class="navigation-list__group-item">
+                    <div class="navigation-list__group-item__icon">
+                        <span class="material-symbols-outlined material-symbols-outlined--folder">square</span>
+                    </div>
+                    <div class="navigation-list__group-item__text">Folder</div>
+                </div>
+                <div class="navigation-list__group-item">
+                    <div class="navigation-list__group-item__icon">
+                        <span class="material-symbols-outlined material-symbols-outlined--folder">circle</span>
+                    </div>
+                    <div class="navigation-list__group-item__text">Folder</div>
+                </div>
+<!--                <hr class="navigation-list__group-item__line">-->
+            </div>
+        </div>
+    </nav>
+</div>
+
 </body>
 </html>
