navigation drawer ready

--- a/src/index.html
+++ b/src/index.html
@@ -9,67 +9,67 @@
 <div class="container">
     <nav class="navigation">
         <div class="navigation-list">
-            <div class="navigation-list__group-headline">Mail</div>
-            <div class="navigation-list__group">
-                <div class="navigation-list__group-item">
+            <div class="navigation-list__group-headline"><h4>Mail</h4></div>
+            <ul class="navigation-list__group">
+                <li class="navigation-list__group-item">
                     <div class="navigation-list__group-item__icon">
                         <span class="material-symbols-outlined">Inbox</span>
                     </div>
-                    <div class="navigation-list__group-item__text">Inbox</div>
-                </div>
-                <div class="navigation-list__group-item">
+                    <a href="#" class="navigation-list__group-item__text">Inbox <span>24</span></a>
+                </li>
+                <li class="navigation-list__group-item">
                     <div class="navigation-list__group-item__icon">
                         <span class="material-symbols-outlined">send</span>
                     </div>
-                    <div class="navigation-list__group-item__text">Outbox</div>
-                </div>
-                <div class="navigation-list__group-item">
+                    <a href="#" class="navigation-list__group-item__text">Outbox</a>
+                </li>
+                <li class="navigation-list__group-item">
                     <div class="navigation-list__group-item__icon">
                         <span class="material-symbols-outlined">favorite</span>
                     </div>
-                    <div class="navigation-list__group-item__text">Favorites</div>
-                </div>
-                <div class="navigation-list__group-item">
+                    <a href="#" class="navigation-list__group-item__text">Favorites</a>
+                </li>
+                <li class="navigation-list__group-item">
                     <div class="navigation-list__group-item__icon">
                         <span class="material-symbols-outlined">archive</span>
                     </div>
-                    <div class="navigation-list__group-item__text">Archive</div>
-                </div>
-                <div class="navigation-list__group-item">
+                    <a href="#" class="navigation-list__group-item__text">Archive</a>
+                </li>
+                <li class="navigation-list__group-item">
                     <div class="navigation-list__group-item__icon">
                         <span class="material-symbols-outlined">delete</span>
                     </div>
-                    <div class="navigation-list__group-item__text">Trash</div>
-                </div>
+                    <a href="#" class="navigation-list__group-item__text">Trash</a>
+                </li>
                 <hr class="navigation-list__group-item__line">
-            </div>
+            </ul>
         </div>
         <div class="navigation-list">
-            <div class="navigation-list__group-headline">Folders</div>
+            <div class="navigation-list__group-headline"><h4>Folders</h4></div>
             <div class="navigation-list__group">
                 <div class="navigation-list__group-item">
                     <div class="navigation-list__group-item__icon">
                         <span class="material-symbols-outlined material-symbols-outlined--folder">square</span>
                     </div>
-                    <div class="navigation-list__group-item__text">Folder</div>
+                    <a href="#" class="navigation-list__group-item__text">Folder</a>
                 </div>
                 <div class="navigation-list__group-item">
                     <div class="navigation-list__group-item__icon">
                         <span class="material-symbols-outlined material-symbols-outlined--folder">circle</span>
                     </div>
-                    <div class="navigation-list__group-item__text">Folder</div>
+                    <a href="#" class="navigation-list__group-item__text">Folder</a>
                 </div>
                 <div class="navigation-list__group-item">
                     <div class="navigation-list__group-item__icon">
                         <span class="material-symbols-outlined material-symbols-outlined--folder">square</span>
                     </div>
-                    <div class="navigation-list__group-item__text">Folder</div>
+                    <a href="#" class="navigation-list__group-item__text">Folder</a>
                 </div>
                 <div class="navigation-list__group-item">
                     <div class="navigation-list__group-item__icon">
                         <span class="material-symbols-outlined material-symbols-outlined--folder">circle</span>
                     </div>
-                    <div class="navigation-list__group-item__text">Folder</div>
+                    <a href="#" class="navigation-list__group-item__text">Folder</a>
                 </div>
 <!--                <hr class="navigation-list__group-item__line">-->
             </div>
