--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,33 @@
 <body>
 
 <div class="container">
+    <nav class="navigation-bar">
+        <div class="navigation-bar__list">
+            <ul class="navigation-bar__list-group">
+                <li class="navigation-bar__list-group__item">
+                    <a href="#" class="navigation-bar__list-group__item__icon">
+                        <span class="material-symbols-outlined">mail</span>
+                        <div class="navigation-bar__list-group__item__text">Mail</div>
+                    </a>
+                    <a href="#" class="navigation-bar__list-group__item__icon">
+                        <span class="material-symbols-outlined">folder</span>
+                        <div class="navigation-bar__list-group__item__text">Folders</div>
+                    </a>
+                    <a href="#" class="navigation-bar__list-group__item__icon">
+                        <span class="material-symbols-outlined">chronic</span>
+                        <div class="navigation-bar__list-group__item__text">Recent</div>
+                    </a>
+                    <a href="#" class="navigation-bar__list-group__item__icon">
+                        <span class="material-symbols-outlined">image</span>
+                        <div class="navigation-bar__list-group__item__text">Photos</div>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+
+
     <nav class="navigation-rail">
         <div class="navigation-rail__list">
             <ul class="navigation-rail__list-group">
